api_versioned_docs/version-12.0.5/avalonia/controls/documents/primitives/actions/textalignmenttoggleaction.mdx
---
title: 'TextAlignmentToggleAction'
hide_title: true
slug: '/avalonia/controls/documents/primitives/actions/textalignmenttoggleaction'
uid: 'Avalonia.Controls.Documents.Primitives.Actions.TextAlignmentToggleAction'
commentId: 'T:Avalonia.Controls.Documents.Primitives.Actions.TextAlignmentToggleAction'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.RichTextEditor'
assembly: 'Avalonia.Controls.RichTextEditor'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Documents.Primitives.Actions'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">TextAlignmentToggleAction Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls.Documents.Primitives.Actions</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.RichTextEditor</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.RichTextEditor</code>
</div>
</div>

<div className="apiref-page__lead">

Action for setting a specific text alignment on block elements.

</div>

<div className="apiref-page__signature">

```csharp
public class TextAlignmentToggleAction
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> BlockPropertyAction&lt;TextAlignment&gt; <span className="apiref-page__relation-separator">-&gt;</span> TextAlignmentToggleAction
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Implements:</span> <a href="ieditoraction">IEditorAction</a>, <a href="itoggleaction">IToggleAction</a>
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [TextAlignmentToggleAction](#uid-7c0fa2196e) | Initializes a new instance of [Avalonia.Controls.Documents.Primitives.Actions.TextAlignmentToggleAction](xref:Avalonia.Controls.Documents.Primitives.Actions.TextAlignmentToggleAction) for the given alignment. |

<section className="apiref-page__member-entry">

<span id="uid-7c0fa2196e"></span>

### TextAlignmentToggleAction Constructor

Initializes a new instance of [Avalonia.Controls.Documents.Primitives.Actions.TextAlignmentToggleAction](xref:Avalonia.Controls.Documents.Primitives.Actions.TextAlignmentToggleAction) for the given alignment.

```csharp
public TextAlignmentToggleAction(Avalonia.Media.TextAlignment value, string idSuffix, string displayName)
```

#### Parameters

`value` [Avalonia.Media.TextAlignment](xref:Avalonia.Media.TextAlignment)

The alignment this action applies.


`idSuffix` string

Suffix appended to the action identifier (e.g. "Left").


`displayName` string

Human-readable name shown in tooltips and menus.


</section>

## Methods

| Name | Description |
| --- | --- |
| [Execute](#uid-a082978bfe) | Executes the action synchronously. |
| [GetAvailableValues](#uid-bcd66b717d) | No summary available. |
| [GetState](#uid-0423d0f633) | Gets the current state of the action. |
| [IsChecked](#uid-01a7e13b41) | Gets whether the action is currently "on" for the selection. |

<section className="apiref-page__member-entry">

<span id="uid-a082978bfe"></span>

### Execute Method

Executes the action synchronously.

```csharp
public void Execute(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor host to execute on.


#### Remarks

For actions that require async operations (like file dialogs),
use [Avalonia.Controls.Documents.Primitives.Actions.IEditorAction.ExecuteAsync(Avalonia.Controls.Documents.Primitives.ITextEditorHost)](xref:Avalonia.Controls.Documents.Primitives.Actions.IEditorAction.ExecuteAsync%28Avalonia.Controls.Documents.Primitives.ITextEditorHost%29) instead.

</section>

<section className="apiref-page__member-entry">

<span id="uid-bcd66b717d"></span>

### GetAvailableValues Method

```csharp
public System.Collections.Generic.IEnumerable<Avalonia.Media.TextAlignment> GetAvailableValues()
```

#### Returns

System.Collections.Generic.IEnumerable&lt;[Avalonia.Media.TextAlignment](xref:Avalonia.Media.TextAlignment)&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-0423d0f633"></span>

### GetState Method

Gets the current state of the action.

```csharp
public object GetState(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor host to query.


#### Returns

object

The current state, or null if the action has no state.
For toggle actions, this returns a boolean.
For property actions, this returns the current property value.


</section>

<section className="apiref-page__member-entry">

<span id="uid-01a7e13b41"></span>

### IsChecked Method

Gets whether the action is currently "on" for the selection.

```csharp
public bool IsChecked(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor host to query.


#### Returns

bool

True if the toggle state is on; otherwise, false.


#### Remarks

For formatting actions, this returns true if all text in the selection
has the formatting applied.

</section>

## Properties

| Name | Description |
| --- | --- |
| [DisplayName](#uid-69a2ba4a9c) | Gets the display name for UI purposes. |
| [Id](#uid-634efe7997) | Gets the unique identifier for this action. |

<section className="apiref-page__member-entry">

<span id="uid-69a2ba4a9c"></span>

### DisplayName Property

Gets the display name for UI purposes.

```csharp
public string DisplayName { get; set; }
```

#### Remarks

This is used for tooltips, menu items, and accessibility.

</section>

<section className="apiref-page__member-entry">

<span id="uid-634efe7997"></span>

### Id Property

Gets the unique identifier for this action.

```csharp
public string Id { get; set; }
```

#### Remarks

IDs follow a hierarchical naming convention:

- Edit.Undo, Edit.Redo, Edit.Cut, etc.
- Format.RichBold, Format.RichItalic, etc.
- Paragraph.AlignLeft, Paragraph.BulletList, etc.

</section>

</ApiRefPage>

